--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,9 +1,15 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
+
 *{
     list-style: none;
     text-decoration: none;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+}
+
+body {
+    font-family: 'Roboto', sans-serif;
 }
 
 header{
@@ -49,11 +55,15 @@ header{
 .container{
     height: 50vh;
     width: 100%;
+    padding: 10px 30px ;
     background: url("/Img/pexels-g-cortez-6419779.jpg") no-repeat center center/cover;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+
+    background-color: rgba(0,0,0,0.4);
+    background-blend-mode: color;
    
 }
 
@@ -68,16 +78,23 @@ header{
     text-align: center;
     color: #fff;
     font-size: 1.5rem;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
 }
 
 .button{
     display: inline-flex;
-    font-size: 1.3rem;
+    font-size: 1.5rem;
+    font-weight: 600;
     color: #fff;
-    padding: 20px 80px;
+    padding: 15px 80px;
     background-color: blueviolet;
+    border: 1px solid #fff;
     border-radius: 8px;
+    transition: .6s ;
+}
+
+.button:hover{
+    background-color: rgba(0, 0, 0, .8);
 }
 
 
@@ -98,28 +115,30 @@ header{
 
     .nav-ul{
         position: absolute;
+        flex-direction: column;
+        text-align: center;
         top: -200%;
         right: 0px;
         width: 70%;
-        transition: .6s all;
+        transition: .9s all;
     }
 
     .nav-ul.show{
         top: 100px;
         background-color: hsl(217, 28%, 15%);
-        flex-direction: column;
-        text-align: center;
+       
     }
 
     .button{
         padding: 15px 60px;
+        font-size: 1.2rem;
     }
 
 }
 
 @media (max-width: 550px){
     .title{
-        font-size: 2rem;
+        font-size: 1.8rem;
     }
 
     .loren{
