--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ header{
     height: 50vh;
     width: 100%;
     padding: 10px 30px ;
-    background: url("/Img/pexels-g-cortez-6419779.jpg") no-repeat center center/cover;
+    background: url("pexels-g-cortez-6419779.jpg") no-repeat center center/cover;
     display: flex;
     flex-direction: column;
     align-items: center;
